Fix horizontal showcase full bleed on mobile

--- a/style.css
+++ b/style.css
@@ -6176,11 +6176,11 @@ button:hover,
   }
 
   #products-container .showcase-inline{
-    width:100vw;
-    max-width:100vw;
+    width:calc(100% + 32px);
+    max-width:none;
     min-width:0;
-    margin-left:calc(50% - 50vw);
-    margin-right:calc(50% - 50vw);
+    margin-left:-16px;
+    margin-right:-16px;
     padding:0;
   }
 
@@ -7273,20 +7273,20 @@ button:hover,
   }
 
   #market-showcase{
-    width:100vw;
-    max-width:100vw;
+    width:calc(100% + 16px);
+    max-width:none;
     min-width:0;
-    margin-left:calc(50% - 50vw);
-    margin-right:calc(50% - 50vw);
+    margin-left:-8px;
+    margin-right:-8px;
     padding:0;
   }
 
   .showcase-inline{
-    width:100vw;
-    max-width:100vw;
+    width:calc(100% + 16px);
+    max-width:none;
     min-width:0;
-    margin-left:calc(50% - 50vw);
-    margin-right:calc(50% - 50vw);
+    margin-left:-8px;
+    margin-right:-8px;
     padding:0;
   }
 
@@ -7298,6 +7298,13 @@ button:hover,
     grid-auto-columns:100%;
     gap:0;
     padding:0;
+  }
+
+  #products-container .showcase-inline{
+    width:calc(100% + 16px);
+    max-width:none;
+    margin-left:-8px;
+    margin-right:-8px;
   }
 
   #products-container .showcase-track{
@@ -7376,11 +7383,11 @@ button:hover,
   }
 
   #market-showcase{
-    width:100vw;
-    max-width:100vw;
+    width:calc(100% + 16px);
+    max-width:none;
     min-width:0;
-    margin-left:calc(50% - 50vw);
-    margin-right:calc(50% - 50vw);
+    margin-left:-8px;
+    margin-right:-8px;
     padding:0;
   }
 
